# clootsuite

./: .env.example  .gitignore  IMPLEMENTATION.md  SPEC.md  pyproject.toml  test_creator.py  test_init.py  test_init2.py  test_init3.py  test_userinfo.py
clootsuite/: __init__.py
clootsuite/adapters/: __init__.py  base.py  instagram.py  tiktok.py  x.py
clootsuite/cli/: __init__.py  auth.py  main.py  post.py
clootsuite/config/: settings.py
clootsuite/core/: __init__.py  auth_manager.py  models.py  publisher.py
clootsuite/oauth/: __init__.py  server.py
docs/: CNAME  index.html  privacy.html  terms.html  tiktokLCLiJH3qDcH6pY9E4WrOemtPxMoVaOhw.txt
tests/: __init__.py  test_models.py
